New in 0.1.8
------------

 * Added weak references.

New in 0.1.7
------------

 * We now support the dyld found on Mac OS X/Darwin.
 * Optimized IID storage for space and time as best as humanly
   possible and usable.
 * Enabled generation of position-independent code (allows for more
   sharing between processes, but is almost 20% bigger, can be
   disabled).
 * Added an XPLC helper class, that provides shortcuts to many often
   used operations and also takes care of proper lifetime of the
   service manager reference.
 * Some bugs fixed.

New in 0.1.6
------------

 * Added a (still experimental) smart pointer templated class.
 * Fixed a large number of leaks, thanks to Valgrind.
 * Simplified building on Windows.
 * Added support for number of new platforms.
 * Switched to autoconf 2.5x.
 * Added support for building without dynamic loading support.
 * Code cleanups.
 * Improved Standard C++ correctness.
 * Created a new libxplc-cxx.a library that contains the code for the
   C++ bindings.
 * Added a "create" templated helper function to create instances of
   components quickly and easily.
 * Improved GenericComponent to also automate getInterface
   implementation.
 * Added a Perl script to convert the output of "uuidgen" to a C
   definition.
 * Improved the dependencies generation (now compatible with gcc 3).
 * Fixed various small bugs and warnings.

New in 0.1.5
------------

 * Added an RPM package spec file.
 * Improved general portability.
 * Fixed the Win32 port and added Visual Studio 2002 project files.

New in 0.1.4
------------

 * Added the long awaited module loader, that will load modules from a
   given directory.
 * Combined the unit tests into a single binary.
 * Fixed a number of bugs, including a number of memory leaks found
   using Valgrind.
 * Various evolutive reorganizations and clarifications.
 * Added support for FreeBSD.

New in 0.1.3
------------

 * Added a way to mark unstable interfaces as such, so that you cannot