@@ -1,7 +1,12 @@
 New in 0.1.8
 ------------
 
- * Added weak references.
+ * Added weak references and appropriate tests.
+ * Improved GenericComponent to handle weak reference support
+   automatically.
+ * The XPLC helper class can now create objects directly from a
+   moniker.
+ * Fixed a problem in the RPM package.
 
 New in 0.1.7
 ------------
